--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,21 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.forge.addon</groupId>
-	<artifactId>DockerAddon</artifactId>
+	<artifactId>docker-addon</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
-		<version.furnace>2.15.1.Final</version.furnace>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.forge>2.16.0.Final</version.forge>
+		<version.furnace>2.16.0.Final</version.furnace>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.jboss.forge</groupId>
 				<artifactId>forge-bom</artifactId>
-				<version>${version.furnace}</version>
+				<version>${version.forge}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -29,12 +30,6 @@
 			<artifactId>cdi</artifactId>
 			<classifier>forge-addon</classifier>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.forge.addon</groupId>
-			<artifactId>DockerAddon</artifactId>
-			<classifier>forge-addon</classifier>
-			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.forge.addon</groupId>
@@ -111,8 +106,8 @@
 			<version>1.0.0-alpha-2</version>
 		</dependency>
 	</dependencies>
-	<build>
-		<finalName>DockerAddon</finalName>
+<build>
+		<finalName>docker-addon</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -123,23 +118,6 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
-						<configuration>
-							<classifier>forge-addon</classifier>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>create-forge-addon</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<inherited>false</inherited>
 						<configuration>
 							<classifier>forge-addon</classifier>
 						</configuration>
