--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,13 @@
 
    <developers>
       <developer>
-         <id>devanshy</id>
+         <id>devanshu</id>
          <name>Devanshu Singh</name>
          <email>devanshu911@gmail.com</email>
       </developer>
    </developers>
    <contributors>
       <contributor>
-         <id>gastaldi</id>
          <name>George Gastaldi</name>
          <email>gegastaldi@gmail.com</email>
       </contributor>
