--- a/pom.xml
+++ b/pom.xml
@@ -1,186 +1,202 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-   <parent>
-      <groupId>org.jboss</groupId>
-      <artifactId>jboss-parent</artifactId>
-      <version>19</version>
-   </parent>
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>org.jboss.forge.addon</groupId>
-   <artifactId>docker-addon</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
-   <name>Docker Addon</name>
-   <description>A docker addon for JBoss Forge 2</description>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<parent>
+		<groupId>org.jboss</groupId>
+		<artifactId>jboss-parent</artifactId>
+		<version>19</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.jboss.forge.addon</groupId>
+	<artifactId>docker-addon</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>Docker Addon</name>
+	<description>A docker addon for JBoss Forge 2</description>
 
-   <licenses>
-      <license>
-         <name>Eclipse Public License version 1.0</name>
-         <url>http://www.eclipse.org/legal/epl-v10.html</url>
-      </license>
-   </licenses>
+	<licenses>
+		<license>
+			<name>Eclipse Public License version 1.0</name>
+			<url>http://www.eclipse.org/legal/epl-v10.html</url>
+		</license>
+	</licenses>
 
-   <developers>
-      <developer>
-         <id>devanshu</id>
-         <name>Devanshu Singh</name>
-         <email>devanshu911@gmail.com</email>
-      </developer>
-   </developers>
-   <contributors>
-      <contributor>
-         <name>George Gastaldi</name>
-         <email>gegastaldi@gmail.com</email>
-      </contributor>
-   </contributors>
-   <properties>
-      <maven.compiler.source>1.7</maven.compiler.source>
-      <maven.compiler.target>1.7</maven.compiler.target>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <version.forge>2.16.2.Final</version.forge>
-      <version.furnace>2.18.2.Final</version.furnace>
-      <version.snakeyaml>1.15</version.snakeyaml>
-   </properties>
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>org.jboss.forge</groupId>
-            <artifactId>forge-bom</artifactId>
-            <version>${version.forge}</version>
-            <type>pom</type>
-            <scope>import</scope>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
-   <dependencies>
-      <dependency>
-         <groupId>org.yaml</groupId>
-         <artifactId>snakeyaml</artifactId>
-         <version>${version.snakeyaml}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.furnace.container</groupId>
-         <artifactId>cdi</artifactId>
-         <classifier>forge-addon</classifier>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>ui</artifactId>
-         <classifier>forge-addon</classifier>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>configuration</artifactId>
-         <classifier>forge-addon</classifier>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>resources</artifactId>
-         <classifier>forge-addon</classifier>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>facets</artifactId>
-         <classifier>forge-addon</classifier>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>projects</artifactId>
-         <classifier>forge-addon</classifier>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>maven</artifactId>
-         <classifier>forge-addon</classifier>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.furnace.test</groupId>
-         <artifactId>furnace-test-harness</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.furnace.test</groupId>
-         <artifactId>arquillian-furnace-classpath</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>ui-test-harness</artifactId>
-         <classifier>forge-addon</classifier>
-         <scope>test</scope>
-      </dependency>
-      <!-- Docker Descriptors API -->
-      <dependency>
-         <groupId>org.jboss.shrinkwrap.descriptors</groupId>
-         <artifactId>shrinkwrap-descriptors-api-docker</artifactId>
-         <version>1.0.0-alpha-2</version>
-      </dependency>
+	<developers>
+		<developer>
+			<id>devanshu</id>
+			<name>Devanshu Singh</name>
+			<email>devanshu911@gmail.com</email>
+		</developer>
+	</developers>
+	<contributors>
+		<contributor>
+			<name>George Gastaldi</name>
+			<email>gegastaldi@gmail.com</email>
+		</contributor>
+	</contributors>
+	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.forge>2.16.2.Final</version.forge>
+		<version.furnace>2.18.2.Final</version.furnace>
+		<version.snakeyaml>1.15</version.snakeyaml>
+	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.forge</groupId>
+				<artifactId>forge-bom</artifactId>
+				<version>${version.forge}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${version.snakeyaml}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.furnace.container</groupId>
+			<artifactId>cdi</artifactId>
+			<classifier>forge-addon</classifier>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>ui</artifactId>
+			<classifier>forge-addon</classifier>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>configuration</artifactId>
+			<classifier>forge-addon</classifier>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>resources</artifactId>
+			<classifier>forge-addon</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>facets</artifactId>
+			<classifier>forge-addon</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>projects</artifactId>
+			<classifier>forge-addon</classifier>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>maven</artifactId>
+			<classifier>forge-addon</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.furnace.test</groupId>
+			<artifactId>furnace-test-harness</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.furnace.test</groupId>
+			<artifactId>arquillian-furnace-classpath</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>ui-test-harness</artifactId>
+			<classifier>forge-addon</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>parser-xml</artifactId>
+			<classifier>forge-addon</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>maven</artifactId>
+			<classifier>forge-addon</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>parser-java</artifactId>
+			<classifier>forge-addon</classifier>
+		</dependency>
+		<!-- Docker Descriptors API -->
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.descriptors</groupId>
+			<artifactId>shrinkwrap-descriptors-api-docker</artifactId>
+			<version>1.0.0-alpha-2</version>
+		</dependency>
 
-      <!-- Docker Descriptors Implementation -->
-      <dependency>
-         <groupId>org.jboss.shrinkwrap.descriptors</groupId>
-         <artifactId>shrinkwrap-descriptors-impl-docker</artifactId>
-         <version>1.0.0-alpha-2</version>
-         <scope>runtime</scope>
-      </dependency>
-   </dependencies>
-   <build>
-      <finalName>docker-addon</finalName>
-      <plugins>
-         <plugin>
-            <artifactId>maven-jar-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>create-forge-addon</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>jar</goal>
-                  </goals>
-                  <configuration>
-                     <classifier>forge-addon</classifier>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-      </plugins>
-   </build>
-   <scm>
-      <connection>scm:git:git://github.com/forge/docker-addon.git</connection>
-      <developerConnection>scm:git:git@github.com:forge/docker-addon.git</developerConnection>
-      <url>http://github.com/forge/docker-addon</url>
-      <tag>HEAD</tag>
-   </scm>
+		<!-- Docker Descriptors Implementation -->
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.descriptors</groupId>
+			<artifactId>shrinkwrap-descriptors-impl-docker</artifactId>
+			<version>1.0.0-alpha-2</version>
+			<scope>runtime</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>docker-addon</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>create-forge-addon</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<classifier>forge-addon</classifier>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<scm>
+		<connection>scm:git:git://github.com/forge/docker-addon.git</connection>
+		<developerConnection>scm:git:git@github.com:forge/docker-addon.git</developerConnection>
+		<url>http://github.com/forge/docker-addon</url>
+		<tag>HEAD</tag>
+	</scm>
 
-   <profiles>
-      <profile>
-         <id>release</id>
-         <activation />
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.jboss.forge.furnace</groupId>
-                  <artifactId>furnace-maven-plugin</artifactId>
-                  <version>${version.furnace}</version>
-                  <executions>
-                     <execution>
-                        <id>generate-dot</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                           <goal>generate-dot</goal>
-                        </goals>
-                        <configuration>
-                           <attach>true</attach>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
+	<profiles>
+		<profile>
+			<id>release</id>
+			<activation />
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jboss.forge.furnace</groupId>
+						<artifactId>furnace-maven-plugin</artifactId>
+						<version>${version.furnace}</version>
+						<executions>
+							<execution>
+								<id>generate-dot</id>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>generate-dot</goal>
+								</goals>
+								<configuration>
+									<attach>true</attach>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
