--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
 			<version>1.0.0-alpha-2</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.docker-java</groupId>
+			<artifactId>docker-java</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>docker-addon</finalName>
